refactor: remove unecessary "id"

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <h1 id="title">JSON Formatter</h1>
+      <h1>JSON Formatter</h1>
       <h2>
         by <a href="https://github.com/mateusmpbr/json-formatter">mateusmpbr</a>
       </h2>
